--- a/Oem Calculator App/index.html
+++ b/Oem Calculator App/index.html
@@ -31,26 +31,26 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="name" placeholder="Name">
+                            <input type="text" class="form-control" id="productName" placeholder="Name">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="price" placeholder="Price">
+                            <input type="text" class="form-control" id="productPrice" placeholder="Price">
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm addBtn">
                         <i class="fas fa-plus"></i>
                         Add
                     </button>
-                    <button type="submit" class="btn btn-warning btn-sm">
+                    <button type="submit" class="btn btn-warning btn-sm updateBtn">
                         <i class="far fa-edit"></i>
                         Save Changes
                     </button>
-                    <button type="submit" class="btn btn-danger btn-sm">
+                    <button type="submit" class="btn btn-danger btn-sm deleteBtn">
                         <i class="fas fa-times"></i>
                         Delete
                     </button>
-                    <button type="submit" class="btn btn-secondary btn-sm">
+                    <button type="submit" class="btn btn-secondary btn-sm cancelBtn">
                         <i class="fas fa-arrow-circle-left"></i>
                         Cancel
                     </button>
@@ -58,18 +58,17 @@
             </div>
         </div>
 
-        <div class="card mt-3">
+        <div id="productCard" class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
-
                 </tbody>
             </table>
         </div>
 
         <div class="card mt-3">
             <div class="card-footer text-right">
-                <p>Total (TL) <strong>1200 TL</strong></p>
-                <p>Total ($) <strong>300 $</strong></p>
+                <p>Total (TL) <strong><span id="total-tl">1200</span> TL</strong></p>
+                <p>Total ($) <strong><span id="total-dolar">300</span> $</strong></p>
             </div>
         </div>
 
@@ -78,7 +77,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js"></script>  
 </body>
 
 </html>
